# Suis-CLI

./: .gitignore  Cargo.toml  LOGO.txt  MASTER.md  README.md  install-suis.sh
.github/workflows/: release.yml
crates/suis-agent/: Cargo.toml
crates/suis-agent/src/: diff.rs  lib.rs  test_util.rs
crates/suis-agent/src/context/: assembler.rs  budget.rs  mod.rs  profile.rs  system_prompt.rs  work_package.rs
crates/suis-agent/src/conversation/: history.rs  message.rs  mod.rs
crates/suis-agent/src/runtime/: agent.rs  events.rs  mod.rs  mode.rs  session.rs
crates/suis-agent/src/tasks/: mod.rs  store.rs  types.rs
crates/suis-agent/src/tools/: access.rs  bash.rs  edit.rs  executor.rs  git.rs  mod.rs  plan.rs  read.rs  search.rs  subagent.rs  task.rs  tree.rs  types.rs
crates/suis-cli/: Cargo.toml
crates/suis-cli/src/: clipboard.rs  main.rs  theme.rs
crates/suis-cli/src/app/: agent_bridge.rs  discovery.rs  event_loop.rs  input.rs  mod.rs  startup.rs  state.rs
crates/suis-cli/src/commands/: handlers.rs  mod.rs  parser.rs
crates/suis-cli/src/prompts/: command_prompt.rs  file_prompt.rs  mod.rs  tool_summary.rs
crates/suis-cli/src/screens/: chat.rs  diff_screen.rs  mod.rs  model_select.rs  permissions.rs  plan_select.rs  project_init.rs  provider_form.rs  providers.rs
crates/suis-cli/src/widgets/: command_palette.rs  confirm_box.rs  context_gauge.rs  diff_viewer.rs  footer.rs  input_box.rs  list_frame.rs  md.rs  message_list.rs  mod.rs  notice_popup.rs  permission_prompt.rs  plan_review.rs  task_panel.rs  usage_popup.rs  welcome.rs
crates/suis-core/: Cargo.toml
crates/suis-core/src/: errors.rs  lib.rs  test_util.rs  util.rs
crates/suis-core/src/config/: global.rs  mod.rs  paths.rs  providers.rs
crates/suis-core/src/filesystem/: guard.rs  mod.rs  ops.rs  trash.rs
crates/suis-core/src/permissions/: evaluator.rs  mod.rs  store.rs  types.rs
crates/suis-core/src/projects/: config.rs  mod.rs  plans.rs
crates/suis-core/src/workspace/: boundary.rs  detect.rs  mod.rs
crates/suis-providers/: Cargo.toml
crates/suis-providers/src/: capability.rs  detection.rs  lib.rs  model.rs  model_meta.rs  presets.rs  provider.rs  registry.rs  test_util.rs
crates/suis-providers/src/discovery/: anthropic.rs  llamacpp.rs  lmstudio.rs  mod.rs  ollama.rs  openai_compat.rs
crates/suis-providers/src/transport/: anthropic.rs  mod.rs  ollama.rs  openai.rs  tool_text.rs  types.rs
docs/: AGENT_CAPABILITY_ROADMAP.md  AGENT_RUNTIME.md  CONTEXT_ASSEMBLY.md  DESIGN_PRINCIPLES.md  MVP_SCOPE.md  PERMISSIONS.md  PERMISSION_SYSTEM.md  REPOSITORY_STRUCTURE.md  SUGGESTIONS.md  TOOLS.md  UDPATE.md  WORKFLOW_MODEL.md
scripts/: dev.sh  install.sh  release.sh
src/: lib.rs
tests/integration/: file_tools.rs  permission_flow.rs  provider_discovery.rs
tests/integration/common/: mod.rs
