[package]
name = "suis-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
suis-core = { workspace = true }
suis-providers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Process-group kill (SIGKILL to -pgid) when a command times out. Already in the
# dependency tree transitively; declared directly for the explicit `kill(2)`.
libc = "0.2"
